# medium-article-generator

./: AI_Economy_Impact_Report_2026.txt  README.md  main.py  pyproject.toml
notebooks/: agent_exp.ipynb
notebooks/medium_article/: latest_ai_agent_advancements_summary.md
reports/: AI_Impact_on_Economy_Report.md
src/agents/research_agents/: arxiv_research.py  ddg_research.py  newspaper_research.py  testing.py  web_search.py  wikipedia_search.py
src/agents/social_media_agents/: youtube.py
src/config/: __init__.py  instructions.yaml  setup_logging.py  utils.py
src/team/: social_media_team.py
src/teams/: research.py  social_research.py
src/tools/: search_tools.py  socialmeida_tools.py
src/workflow/: execute_workflow.py  workflow.py
