[project]
name = "medium-article-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.24",
    "arxiv>=2.4.0",
    "ddgs>=9.10.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-mistralai>=1.1.1",
    "langgraph-supervisor>=0.0.31",
    "mcp>=1.25.0",
    "pypdf>=6.6.0",
    "wikipedia>=1.4.0",
    "yfinance>=1.0",
    "youtube-transcript-api>=1.2.3",
    "newspaper4k>=0.9.3.1",
    "lxml_html_clean>=0.1.0",
    "mistralai>=1.0.0",
    "google-genai>=0.2.0",
    "groq>=0.5.0",
    "openai>=1.0.0",
]
